# learnOpenGL

./: .gitignore  .gitmodules  README.md
01-hello_triangle/: test
03-textures/src/: main.c
04-transformations/: CMakeLists.txt
06-camera/: CMakeLists.txt
06-camera/Dependencies/glad/include/glad/: glad.h
06-camera/src/: camera.c  camera.h  main.c  shader.c  shader.fs  shader.h
07-colors/src/: main.c  shader.c  shader.fs
08-basic-light/: CMakeLists.txt
08-basic-light/src/: main.c  shader.c  shader.fs  shader.h
09-materials/Dependencies/glad/src/: glad.c
09-materials/src/: main.c  shader.c  shader.fs  shader.vs
10-lighting_maps/src/: main.c  shader.c  shader.fs  shader.h  shader.vs
coordinate_systems/src/: main.c
hello_triangle/: CMakeLists.txt  hello_triangle
shaders/: CMakeLists.txt
shaders/src/: main.c  shader.c  shader.h  shader.vs
src/: test.c
textures/: CMakeLists.txt
textures/src/: main.c  shader.c  shader.vs
transformations/src/: main.c
